crates/riri-yarn/tests/snapshots/scan_fixtures__scan_yarn_fixture@yarn-v1-scoped-packages.snap
---
source: crates/riri-yarn/tests/scan_fixtures.rs
expression: snapshot
---
@fake-scope/fake-lib-a: {node: >=14.0.0}
fake-lib-b: {node: >=16.0.0}
