crates/riri-yarn/tests/snapshots/scan_fixtures__scan_yarn_fixture@yarn-v1-up-to-date.snap
---
source: crates/riri-yarn/tests/scan_fixtures.rs
expression: snapshot
---
fake-lib-a: {node: >=16.0.0}
